# encorebuilder

./: .gitignore  CMakeLists.txt  Generator.py  Main.qml  README.md  excel_generator.py  exel_generator.py  main.cpp  saver.cpp  saver.h
i18n/: app_ru.ts
ui/components/: TableHeaderRow.qml
ui/dialogs/: ManagerListDialog.qml  StartupDialog.qml
ui/shell/: AppShell.qml
ui/tables/: SignalTableView.qml
ui/theme/: Theme.qml
